data/derived/comb/progs/unify/prog0009.ml.out
Characters 107-118:
  then additivePersistence (temp, i+1)
                           ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
